# class_activities_and_resources

./: README.md
in_class_day02_solutions/: package.xml  setup.cfg  setup.py
in_class_day02_solutions/in_class_day02_solutions/: receive_message.py  send_message.py  test_message.py
in_class_day03_solutions/: package.xml  setup.cfg  setup.py
in_class_day03_solutions/in_class_day03_solutions/: distance_emergency_stop.py  emergency_stop.py
in_class_day04_solutions/: package.xml  setup.cfg  setup.py
in_class_day04_solutions/in_class_day04_solutions/: wall_approach.py  wall_approach_fancy.py  wall_approach_starter.py
keypoints_and_descriptors/: match_keypoints.py  track_meanshift_color_hist.py  track_meanshift_keypoints.py  visualize_sift.py
multi_neato/: package.xml  setup.cfg  setup.py
multi_neato/multi_neato/: cmd_vel_multiplexer.py
neato_soccer/: package.xml  setup.cfg  setup.py
neato_soccer/neato_soccer/: ball_tracker.py  ball_tracker_solution.py
sample_node_architectures/: package.xml  setup.cfg  setup.py
sample_node_architectures/sample_node_architectures/: angle_helpers.py  drive_square.py  get_odom_rpy.py
simple_filter/: CMakeLists.txt  package.xml
simple_filter/scripts/: neato_bridge.py  simple_controller.py  simple_filter_world.py  simple_kalman.py  simple_particle_filter.py
